--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arabic Vocabulary Quiz</title>
-    <link rel="stylesheet" href="css/style3.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-    <script src="js/app3.js"></script>
+    <script src="app3.js"></script>
 </body>
 
 </html>
