--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Incorrect Answers History</title>
-    <link rel="stylesheet" href="css/style3.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div id="history-container"></div>
 
     </div>
-    <script src="js/history.js"></script>
+    <script src="history.js"></script>
 </body>
 
 </html>
